--- a/desafio2/PracticasTratamientoDatosGustavo.ipynb
+++ b/desafio2/PracticasTratamientoDatosGustavo.ipynb
@@ -165,11 +165,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yHBHJ6-BHWGy",
-        "outputId": "225be668-6dc9-4e9e-8d0a-ef4c132df251",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yHBHJ6-BHWGy",
+        "outputId": "225be668-6dc9-4e9e-8d0a-ef4c132df251"
       },
       "source": [
         "df.shape"
@@ -1475,14 +1475,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0fh_52DFi0vN"
+      },
+      "source": [
+        "Cantidad de fallecimientos por provincias"
+      ],
+      "id": "0fh_52DFi0vN"
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "lHMou1sif_3s",
-        "outputId": "f97fd789-29fa-4b6e-a4f4-7a6e9456e870",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 203
-        }
+        },
+        "id": "lHMou1sif_3s",
+        "outputId": "f97fd789-29fa-4b6e-a4f4-7a6e9456e870"
       },
       "source": [
         "df.head()"
@@ -1595,6 +1605,33 @@
           },
           "metadata": {},
           "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F2sGP2EVix6n",
+        "outputId": "3c80553a-ec9a-44a1-f323-ffa1590271d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df.shape"
+      ],
+      "id": "F2sGP2EVix6n",
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(168, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ]
     }
